<resources>
    <string name="app_name">Shwe Mi Sale</string>
    <string name="name_tag">Name Tag :</string>
    <string name="small_size">Small</string>
    <string name="large_size">Large</string>
    <string name="save">သိမ်းမည်</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="loading">Loading Pdf</string>
    <string name="please_wait">Please wait Pdf</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="lbl_learn_more"><u>Learn more</u></string>
    <string name="remove_current_photo">Remove current photo</string>

    <string name="total_added_item">Total added items (%1$s)</string>
    <string name="gram_value">%1$s gm</string>
    <string name="kyat_value">%1$s K</string>
    <string name="pae_value">%1$s P</string>
    <string name="ywae_value">%1$s Y</string>
    <string name="mmk_value">%1$s MMK</string>
    <string name="discount_percentage">%1$s %%လျှော့ပြီး</string>
    <string name="mmk_value_with_percentage_discount">%1$s MMK %2$s %လျှော့ပြီး </string>
    <string name="carat_value">%1$s Carat</string>

    <string name="kpy_value">%1$s K %2$s P %3$s Y</string>
    <string name="gold_carat_change_alert_dialog_title">ရွှေရည်ကို ပြင်ဆင်ပါက အခြားတန်ဖိုးများ ပြောင်းလဲမှုရှိုနိင်ပါတယ်</string>
    <string name="changed_values">ပြောင်းလဲသွားသော တန်ဖိုးများ</string>
    <string name="gold_carat_change_alert_message">“ပြန်ဝယ်စျေး” သည် “ပစ္စည်းအခြေအနေ”အပေါ် မမှီခိုတော့ဘဲ “ရွှေရည်” အပေါ်သာ မှီခိုပါတော့မည်</string>
    <string name="sure_to_proceed">သင်ဆက်၍ လုပ်ဆောင်မှာ သေချာပြီလား။</string>
    <string name="continue_text">ဆက်လုပ်မည်</string>
    <string name="stop">ရပ်မည်</string>
    <string name="a_buying_price_change_dialog">အဝယ်သို့ထည့်ပေးရွှေချိန်ကို ပြင်ဆင်ပါက အခြားတန်ဖိုးများ ပြောင်းလဲမှုရှိုနိင်ပါတယ်</string>
    <string name="b_buying_price_change_dialog">ဘောင်ချာဖွင့်ဝယ်ပေးငွေကို ပြင်ဆင်ပါက အခြားတန်ဖိုးများ ပြောင်းလဲမှုရှိုနိင်ပါတယ်</string>
    <string name="c_buying_price_change_dialog">ဘောင်ချာဖွင့်ဝယ်စျေးကို ပြင်ဆင်ပါက အခြားတန်ဖိုးများ ပြောင်းလဲမှုရှိုနိင်ပါတယ်</string>
    <string name="string_price_a">ဝယ်စျေး</string>
    <string name="string_price_b">ဘောင်ချာဖွင့်ဝယ်ပေးငွေ</string>
    <string name="string_price_c">ဘောင်ချာဖွင့်ဝယ်ပေးငွေ</string>
    <string name="string_weight_d">‌ရွှေချိန်(KPY)</string>
    <string name="string_price_e">အဝယ်ဘောင်ချာမှစျေး</string>
    <string name="string_weight_f">‌အဝယ်သို့ထည့်ပေးရွှေချိန်</string>
    <string name="string_decided_pawn_price">သတ်မှတ်အပေါင်စျေး</string>
    <string name="total_gold_weight">စုစုပေါင်းရွှေချိန်</string>
    <string name="total_wastage">စုစုပေါင်းအ‌‌ရော့</string>
    <string name="total_gold_weight_with_wastage">စုစုပေါင်းအရော့ပါရွှေချိန်</string>
    <string name="gold_weight_from_old_stocks">အိမ်ပါရွှေချိန်</string>
    <string name="polo_gold">ပိုလို‌‌ရွှေ</string>
    <string name="tv_label_old_voucher_payment">ဘောင်ချာ‌‌ဟောင်းပေးသွင်း‌ငွေ</string>
    <string name="stock_from_home_value">အိမ်ပါရွှေတန်ဖိုး</string>
    <string name="total_maintainence_cost">လက်ခပေါင်း</string>
    <string name="total_pt_clip_cost">PT ကလစ်ဖိုး</string>
    <string name="total_gem_value">ကျောက်ဖိုးပေါင်း</string>
    <string name="total_values">တန်ဖိုး စုစုပေါင်း</string>
    <string name="flash_sale_discount">Flash sale discount</string>
    <string name="reduced_money_from_interest">အတိုးမှ နှုတ်ယူအသုံးပြုငွေ</string>
    <string name="reduced_money">လျှော့ပေးငွေ</string>
    <string name="total_reduced_money">စုစုပေါင်းလျှော့ပေးငွေ</string>
    <string name="total_cost">ကျသင့်ငွေ စုစုပေါင်း</string>
    <string name="tax_money">အခွန်ကျသင့်ငွေ</string>
    <string name="total_cost_including_tax">အခွန်ပါတန်ဖိုး</string>
    <string name="remain_money">ကျန်ငွေ</string>
    <string name="print">ပရင့်ထုတ်</string>
    <string name="choose_stock_from_home_calculation">အိမ်ပါရွှေတွက်ချက်ပုံရွေးချယ်ပါ</string>
    <string name="old_stock_weight">အိမ်ပါရွှေချိန်</string>
    <string name="old_stock_value">အိမ်ပါရွှေတန်ဖိုး</string>
    <string name="add">Add</string>
    <string name="reduced_money_plural">လျှော့ပေးငွေများ</string>
    <string name="calculate">တွက်ချက်မည်</string>
    <string name="insert_payment_from_customer">Customer မှပေးသွင်းငွေ ထည့်ပါ</string>
    <string name="pay_full_payment">အပြည့်ပေးချေမည်</string>
    <string name="choose_payment_method">ငွေပေးသွင်းပုံစံ ရွေးပါ</string>

</resources>