<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:minWidth="600dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/gold_carat_change_alert_dialog_title"
        android:textAppearance="@style/TextAppearance.ShweMi.Headline6"
        android:textColor="@color/grey_black"
        app:layout_constraintTop_toTopOf="@id/iv_cross"
        app:layout_constraintBottom_toBottomOf="@id/iv_cross"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/iv_cross"/>
    <TextView
        android:id="@+id/tv_label_changed_values"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/grey_ash"
        android:text="@string/changed_values"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
        android:id="@+id/iv_cross"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_cross" />
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_changed_value"
        android:layout_width="550dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_label_changed_values"
        app:layout_constraintStart_toStartOf="@id/tv_label_changed_values"
        android:layout_marginTop="16dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/grey_line"
        app:cardCornerRadius="12dp">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:showDividers="middle"
            android:orientation="vertical">

            <!-- First Row -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="4"
                android:padding="16dp"
                android:orientation="horizontal">

                <!-- Column 1 -->
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"/>

                <!-- Column 2 -->
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/grey_label"
                    android:textAppearance="@style/TextAppearance.ShweMi.Body2"
                    android:textAlignment="textEnd"
                    android:text="မှ"
                    />

                <!-- Column 3 -->
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="သို့"
                    android:textColor="@color/grey_label"
                    android:textAppearance="@style/TextAppearance.ShweMi.Body2"
                    android:textAlignment="textEnd"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/darker_gray" />
            <!-- Second Row -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="4"
                android:padding="16dp"
                android:orientation="horizontal">

                <!-- Column 1 -->
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="ပြန်ဝယ်စျေး"
                    android:textAppearance="@style/TextAppearance.ShweMi.Body2"
                    android:textAlignment="textStart"/>

                <!-- Column 2 -->
                <TextView
                    android:id="@+id/tv_from_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="45,000 MMK"
                    android:textColor="@color/grey_label"
                    android:textAppearance="@style/TextAppearance.ShweMi.Body2"
                    android:textAlignment="textEnd"/>

                <!-- Column 3 -->
                <TextView
                    android:id="@+id/tv_to_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="50,000 MMK"
                    android:textColor="@color/grey_off_black"
                    android:textAppearance="@style/TextAppearance.ShweMi.Body2"
                    android:textAlignment="textEnd"/>
            </LinearLayout>
        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_alert_message"
        android:layout_width="550dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mcv_changed_value"
        app:layout_constraintStart_toStartOf="@id/mcv_changed_value"
        android:layout_marginTop="16dp"
        app:strokeWidth="1dp"
        app:cardBackgroundColor="@color/grey_bg"
        app:cardCornerRadius="12dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/alert_circle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/gold_carat_change_alert_message"
            android:textAppearance="@style/TextAppearance.ShweMi.Body2"
            android:textColor="@color/grey_body"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_alert"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <TextView
        android:id="@+id/tv_label_are_you_sure_to_proceed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textAppearance="@style/TextAppearance.ShweMi.Body2"
        android:textColor="@color/grey_body"
        android:text="@string/sure_to_proceed"
        app:layout_constraintTop_toBottomOf="@id/mcv_alert_message"
        app:layout_constraintStart_toStartOf="@id/mcv_alert_message"/>

    <View
        android:id="@+id/view4"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@id/mcv_alert_message"
        app:layout_constraintStart_toStartOf="@id/tv_label_are_you_sure_to_proceed"
        app:layout_constraintTop_toBottomOf="@id/tv_label_are_you_sure_to_proceed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:text="@string/continue_text"
        app:cornerRadius="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/mcv_alert_message"
        app:layout_constraintTop_toBottomOf="@+id/view4" />
    <TextView
        android:id="@+id/tv_stop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textAppearance="@style/TextAppearance.ShweMi.Body2"
        android:textColor="@color/grey_body"
        android:text="@string/stop"
        app:layout_constraintTop_toTopOf="@id/btn_continue"
        app:layout_constraintBottom_toBottomOf="@id/btn_continue"
        app:layout_constraintEnd_toStartOf="@id/btn_continue"
        />
</androidx.constraintlayout.widget.ConstraintLayout>